[Core] Fix the split button alignment.

--- a/core-bundle/src/Resources/contao/themes/flexible/src/basic.css
+++ b/core-bundle/src/Resources/contao/themes/flexible/src/basic.css
@@ -449,7 +449,7 @@ a.tl_submit {
 	border-color:#aaa transparent transparent;
 }
 .split-button button img {
-	vertical-align:bottom;
+	vertical-align:0;
 }
 .split-button > button[type="submit"] {
 	position:relative;
